# python-backend

./: .env  .gitignore  README.md  pyproject.toml  pyrightconfig.json
app/: .env  config.py  db.py  main.py
app/entities/: user.py
app/routes/: api.py  user.py
app/services/: user.py
database/: 1202.sql
tests/: test_main.py
